fileIds заменен на таблицу _files (fileId,format)